[gd_scene load_steps=14 format=3 uid="uid://hvw2tjk7rxpp"]

[ext_resource type="Script" path="res://Enemies/Oposum/oposum.gd" id="1_3m2ad"]
[ext_resource type="Texture2D" uid="uid://b3qsnu86qjb8v" path="res://Enemies/Oposum/oposum.png" id="1_dpmf7"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_m1g00"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1h3k"]
shader = ExtResource("2_m1g00")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocnlb"]
atlas = ExtResource("1_dpmf7")
region = Rect2(0, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f4tl"]
atlas = ExtResource("1_dpmf7")
region = Rect2(36, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_khukr"]
atlas = ExtResource("1_dpmf7")
region = Rect2(72, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3mw"]
atlas = ExtResource("1_dpmf7")
region = Rect2(108, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xm8g"]
atlas = ExtResource("1_dpmf7")
region = Rect2(144, 0, 36, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kweho"]
atlas = ExtResource("1_dpmf7")
region = Rect2(180, 0, 36, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_fblae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocnlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f4tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khukr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kweho")
}],
"loop": true,
"name": &"new_animation",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifm78"]
size = Vector2(32, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4q74"]
size = Vector2(28, 7)

[node name="Oposum" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 6
script = ExtResource("1_3m2ad")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_y1h3k")
sprite_frames = SubResource("SpriteFrames_fblae")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.633067
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 5.5)
shape = SubResource("RectangleShape2D_ifm78")

[node name="left_down" type="RayCast2D" parent="."]
position = Vector2(-14, 0)
target_position = Vector2(0, 20)
collision_mask = 3

[node name="right_down" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(0, 20)
collision_mask = 3

[node name="left" type="RayCast2D" parent="."]
target_position = Vector2(-25, 0)

[node name="right" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="direction_cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="up_player_detector" type="Area2D" parent="."]
collision_mask = 3

[node name="up_player_detector_collision" type="CollisionShape2D" parent="up_player_detector"]
position = Vector2(-2, -6.5)
shape = SubResource("RectangleShape2D_j4q74")

[connection signal="timeout" from="direction_cooldown" to="." method="_on_direction_cooldown_timeout"]
[connection signal="body_entered" from="up_player_detector" to="." method="_on_up_player_detector_body_entered"]
